# AP-doodle-jump

./: .clang-format  .gitignore  AP_DoodleJump_Report_TomDeWilde.docx  CMakeLists.txt  README.md
.circleci/: config.yml
docs/: Doxyfile.in
docs/html/: _b_g_tile_8cpp.html  _b_g_tile_8h.html  _b_g_tile_8h_source.html  _b_g_tile_view_8cpp.html  _b_g_tile_view_8h.html  _b_g_tile_view_8h_source.html  _bonus_8cpp.html  _bonus_8h.html  _bonus_8h_source.html  _bonus_view_8cpp.html  _bonus_view_8h.html  _bonus_view_8h_source.html  _camera_8cpp.html  _camera_8h.html  _camera_8h_source.html  _concrete_factory_8cpp.html  _concrete_factory_8h.html  _concrete_factory_8h_source.html  _entity_factory_8h.html  _entity_factory_8h_source.html  _entity_model_8cpp.html  _entity_model_8h.html  _entity_model_8h_source.html  _entity_view_8cpp.html  _entity_view_8h.html  _entity_view_8h_source.html  _game_8cpp.html  _game_8h.html  _game_8h_source.html  _game_controller_8cpp.html  _game_controller_8h.html  _game_controller_8h_source.html  _game_exception_8cpp.html  _game_exception_8h.html  _game_exception_8h_source.html  _platform_8cpp.html  _platform_8h.html  _platform_8h_source.html  _platform_view_8cpp.html  _platform_view_8h.html  (+130 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  (+39 more)
google_tests/: CMakeLists.txt  camera_test.cpp  entitymodel_test.cpp  score_test.cpp  stopwatch_test.cpp  subject_test.cpp  test1.cpp
google_tests/lib/: CMakeLists.txt
google_tests/lib/include/gtest/internal/: gtest-port.h
google_tests/lib/test/: googletest-output-test.py
include/logic/: BGTile.h  Bonus.h  EntityFactory.h  EntityModel.h  Platform.h  Player.h  Random.h  Score.h  ScoreObserver.h  Stopwatch.h  Subject.h  World.h
include/view/: BGTileView.h  BonusView.h  ConcreteFactory.h  EntityView.h  Game.h  GameController.h  PlatformView.h  PlayerView.h
logic/: CMakeLists.txt
logic/include/: BGTile.h  Bonus.h  Camera.h  EntityFactory.h  EntityModel.h  GameException.h  Platform.h  Player.h  Random.h  Score.h  ScoreObserver.h  Stopwatch.h  Subject.h  ViewObserver.h  World.h
logic/src/: BGTile.cpp  Bonus.cpp  Camera.cpp  EntityModel.cpp  GameException.cpp  Platform.cpp  Player.cpp  Random.cpp  Score.cpp  Stopwatch.cpp  Subject.cpp  World.cpp
src/: CMakeLists.txt  main.cpp
src/headers/logic/: BGTile.h  Bonus.h  Camera.h  EntityFactory.h  EntityModel.h  Observer.h  Platform.h  Player.h  Random.h  Score.h  Stopwatch.h  Subject.h  World.h
src/headers/view/: BonusView.h  ConcreteFactory.h  EntityView.h  Game.h  GameController.h  PlatformView.h  PlayerView.h
src/logic/: BGTile.cpp  Bonus.cpp  Camera.cpp  EntityModel.cpp  Platform.cpp  Player.cpp  Random.cpp  Score.cpp  Stopwatch.cpp  Subject.cpp  World.cpp
src/view/: BGTileView.cpp  BonusView.cpp  ConcreteFactory.cpp  EntityView.cpp  Game.cpp  GameController.cpp  PlatformView.cpp  PlayerView.cpp
view/: CMakeLists.txt
view/include/: BGTileView.h  BonusView.h  ConcreteFactory.h  EntityView.h  Game.h  GameController.h  PlatformView.h  PlayerView.h  StartMenu.h
view/src/: BGTileView.cpp  BonusView.cpp  ConcreteFactory.cpp  EntityView.cpp  Game.cpp  GameController.cpp  PlatformView.cpp  PlayerView.cpp  StartMenu.cpp  main.cpp
